Edited theme.html via GitHub

--- a/theme.html
+++ b/theme.html
@@ -14,57 +14,22 @@
 img {
     border: 0;
 }
-.clear {
-    clear: both;
-    font-size: 0;
-}
-.left {
-    float: left;
-}
-.right {
-    float: right;
-}
-.text-right {
-    text-align: right;
-}
-.center {
-    text-align: center;
-}
-.xxsmall {
-    font-size: 10px;
-}
-.xsmall {
-    font-size: 11px;
-}
-.small {
-    font-size: 12px;
-}
-.normal {
-    font-size: 14px;
-}
-.big {
-    font-size: 16px;
-}
-.black {
-    color: #000;
-}
-.strong {
-    font-weight: bold;
-}
-.float {
-    float: left;
-}
-.right {
-    float: right;
-}
-.uppercase {
-    text-transform: uppercase;
-}
-.absolute-right {
-    position: absolute;
-    top: 0;
-    right: 0;
-}
+.clear { clear: both; font-size: 0; }
+.left { float: left; }
+.right { float: right; }
+.text-right { text-align: right; }
+.center { text-align: center; }
+.xxsmall { font-size: 10px; }
+.xsmall { font-size: 11px; }
+.small { font-size: 12px; }
+.normal { font-size: 14px; }
+.big { font-size: 16px; }
+.black { color: #000; }
+.strong { font-weight: bold; }
+.float { float: left; }
+.right { float: right; }
+.uppercase { text-transform: uppercase; }
+.absolute-right { position: absolute; top: 0; right: 0; }
 body {
     background: #fff;
     font-family: Arial, Helvetica, sans-serif;
