Edited theme.html via GitHub

--- a/theme.html
+++ b/theme.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="color:Accent" content="#0080c3"/>
-
+test
 <title>{PageTitle}</title>
     <link rel="icon" href="/images/favicon.png" type="image/x-png"/>
 <style type="text/css">
